--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.8.0"
+actix-web = "4"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+
