--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ serde = { version = "1", features = ["derive"] }
 config = "0.14"
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+env_logger = "0.11.5"
+log = "0.4.22"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
