--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2.0"
+tracing-actix-web = "0.7"
 secrecy = { version = "0.10", features = ["serde"] }
 
 # Using table-like toml syntax to avoid a super-long line!
