--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
+serde-aux = "4"
 config = "0.14"
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
