--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2.0"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.10", features = ["serde"] }
+unicode-segmentation = "1"
+validator = { version = "0.19" }
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
@@ -43,3 +45,7 @@ features = [
 [dev-dependencies]
 reqwest = "0.12"
 once_cell = "1"
+claim = "0.5"
+fake = "3.1"
+quickcheck = "1"
+quickcheck_macros = "1"
