--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,12 @@ features = [
     "migrate",
 ]
 
+[dependencies.reqwest]
+version = "0.12"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
-reqwest = "0.12"
 once_cell = "1"
 claim = "0.5"
 fake = "3.1"
