--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-actix-web = "0.7"
 secrecy = { version = "0.10", features = ["serde"] }
 unicode-segmentation = "1"
 validator = { version = "0.19" }
+rand = { version = "0", features = ["std_rng"] }
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
