--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ secrecy = { version = "0.10", features = ["serde"] }
 unicode-segmentation = "1"
 validator = { version = "0.19" }
 rand = { version = "0", features = ["std_rng"] }
+thiserror = "2"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
