--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ unicode-segmentation = "1"
 validator = { version = "0.19" }
 rand = { version = "0", features = ["std_rng"] }
 thiserror = "2"
+anyhow = "1"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
