--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ rand = { version = "0", features = ["std_rng"] }
 thiserror = "2"
 anyhow = "1"
 base64 = "0.22"
+argon2 = { version = "0.5.3", features = ["std"] }
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
