--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ urlencoding = "2.1"
 htmlescape = "0.3"
 hmac = { version = "0.12", features = ["std"] }
 sha2 = "0.10"
+hex = "0.4"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
