--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,7 @@ base64 = "0.22"
 argon2 = { version = "0.5.3", features = ["std"] }
 urlencoding = "2.1"
 htmlescape = "0.3"
-hmac = { version = "0.12", features = ["std"] }
-sha2 = "0.10"
-hex = "0.4"
+actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
@@ -55,7 +53,7 @@ features = [
 [dependencies.reqwest]
 version = "0.12"
 default-features = false
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 once_cell = "1"
