--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 serde-aux = "4"
 config = "0.15.4"
 uuid = { version = "1.11.0", features = ["v4", "serde"] }
